src/main/java/com/example/primo_progetto_spring/errors/ErrorResponseDTO.java
package com.example.primo_progetto_spring.errors;

public class ErrorResponseDTO {
    private final String message;

    public ErrorResponseDTO(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }
}
